--- a/Paraphrasing.ipynb
+++ b/Paraphrasing.ipynb
@@ -17,35 +17,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NF19mGkGfU3X",
-        "outputId": "5db9e42c-0545-41b4-fad4-4d1eab0c0466",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "%tensorflow_version 2.x\n",
-        "import tensorflow as tf\n",
-        "device_name = tf.test.gpu_device_name()\n",
-        "if device_name != '/device:GPU:0':\n",
-        "  raise SystemError('GPU device not found')\n",
-        "print('Found GPU at: {}'.format(device_name))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Found GPU at: /device:GPU:0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "8rMTxZUjVUKS"
       },
       "source": [
@@ -175,7 +146,7 @@
         "clone_tokenizer = Tokenizer(num_words=22000)\n",
         "clone_tokenizer.fit_on_texts(training_output)\n",
         "\n",
-        "original_vocab_size, clone_vocab_size = 22000, 22000#len(original_tokenizer.word_counts), len(clone_tokenizer.word_counts)\n",
+        "original_vocab_size, clone_vocab_size = 22000, 22000",
         "largest_vocab_size = max([original_vocab_size, clone_vocab_size])\n",
         "print(len(original_tokenizer.word_counts), largest_vocab_size, original_vocab_size, clone_vocab_size)"
       ],
@@ -236,15 +207,10 @@
         "\n",
         "# Encoder Input\n",
         "training_encoder_input = pad_sequences(encoded_training_input, maxlen=DEFAULT_INPUT_LENGTH)\n",
-        "# Decoder Input (need padding by START_CHAR_CODE)\n",
-        "# training_decoder_input = np.zeros_like(encoded_training_output)\n",
-        "# training_decoder_input[:, 1:] = encoded_training_output[:,:-1]\n",
-        "# training_decoder_input[:, 0] = START_CHAR_CODE\n",
         "training_decoder_input = pad_sequences(encoded_training_input, maxlen=DEFAULT_INPUT_LENGTH)\n",
         "encoded_training_output = pad_sequences(encoded_training_output, maxlen=DEFAULT_INPUT_LENGTH)\n",
         "\n",
         "# Decoder Output (one-hot encoded)\n",
-        "print(encoded_training_output.shape)"
       ],
       "execution_count": null,
       "outputs": [
@@ -295,28 +261,13 @@
         "import pickle\n",
         "import gzip\n",
         "\n",
-        "# One hot encoding in chunks\n",
+        "# Split One hot encoding in chunks and save on disk\n",
         "\n",
         "size = int(len(encoded_training_output) / 30)\n",
-        "# for i in range(1, 35):\n",
-        "#     with gzip.open(f'pickle/{i}.pkl', 'wb') as f:\n",
-        "#         array = np.eye(clone_vocab_size+1)[encoded_training_output[size*(i-1):size*i]]\n",
-        "#         pickle.dump(array, f, pickle.HIGHEST_PROTOCOL)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ycEBPqyS6asN"
-      },
-      "source": [
-        "# size = int(len(encoded_training_output) / 35)\n",
-        "# print(size)\n",
-        "# for i in range(35):\n",
-        "#     i += 1\n",
-        "#     print(size*(i-1), '-',size*i)"
+        " for i in range(1, 35):\n",
+        "     with gzip.open(f'pickle/{i}.pkl', 'wb') as f:\n",
+        "         array = np.eye(clone_vocab_size+1)[encoded_training_output[size*(i-1):size*i]]\n",
+        "         pickle.dump(array, f, pickle.HIGHEST_PROTOCOL)"
       ],
       "execution_count": null,
       "outputs": []
@@ -327,6 +278,7 @@
         "id": "XGdSi3Mr2ZBj"
       },
       "source": [
+        "# Load the One Hot Encoding from disk to a generator object",
         "import gzip\n",
         "\n",
         "def gen():        \n",
@@ -378,6 +330,7 @@
         }
       },
       "source": [
+        "# Load input and target both in a generator for training the model",
         "print(size)\n",
         "def model_generator():\n",
         "    while True:\n",
@@ -395,18 +348,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ld7ewSUHfAOl"
-      },
-      "source": [
-        "# print(training_encoder_input[0].shape, training_decoder_input.shape[0])\n",
-        "# original_embedding_matrix.shape, clone_embedding_matrix.shape"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -442,27 +383,13 @@
         "\n",
         "print(model.summary())\n",
         "\n",
+        "# Even with batch_size=4 and steps_per_epoch=1/4 of the data, the RAM collapses",
         "model.fit(model_generator(), \n",
         "          epochs=20, \n",
         "          batch_size=4, \n",
         "          steps_per_epoch=training_decoder_input.shape[0]//256,\n",
         "          verbose=1)\n",
-        "\n",
-        "model.save('model')\n",
-        "\n",
-        "\n",
-        "model = load_model('model', compile=False)\n",
-        "\n",
-        "def generate_cloned_sequence(original_sentence):\n",
-        "    encoder_input = transform(original_encoding, [original_sentence.lower()], DEFAULT_INPUT_LENGTH)\n",
-        "    decoder_input = np.zeros(shape=(len(encoder_input), DEFAULT_OUTPUT_LENGTH), dtype='int')\n",
-        "    decoder_input[:,0] = START_CHAR_CODE\n",
-        "    \n",
-        "    for i in range(1, DEFAULT_OUTPUT_LENGTH):\n",
-        "        output = model.predict([encoder_input, decoder_input]).argmax(axis=2)\n",
-        "        decoder_input[:,i] = output[:,i]\n",
-        "    \n",
-        "    return decoder_input[0, 1:]"
+        "\n",        
       ],
       "execution_count": null,
       "outputs": [
@@ -516,123 +443,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gZICkK7ny2VB"
-      },
-      "source": [
-        "import sys\n",
-        "import numpy\n",
-        "numpy.set_printoptions(threshold=sys.maxsize)\n",
-        "\n",
-        "foo, bar = training_encoder_input[545], training_decoder_input[545]\n",
-        "pred = model.predict([foo, bar])\n",
-        "pred = pred.reshape(1, 20, pred.shape[2])\n",
-        "print(pred.shape)\n",
-        "array = np.argmax(pred[0], axis=1)\n",
-        "print(array, np.argmax(pred, axis=2), array.shape)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "k26kopjiF1dD"
-      },
-      "source": [
-        "df = [clone_decoding[i] for i in array if i != 0]\n",
-        "df"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2-CeCb5LFc9a"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_g-AqdO5fh_z"
-      },
-      "source": [
-        "# def decode_sequence(decoding, sequence):\n",
-        "#     text = ''\n",
-        "#     for i in sequence:\n",
-        "#         if i == 0:\n",
-        "#             break\n",
-        "#         else:   \n",
-        "#             text += decoding[i]\n",
-        "\n",
-        "#     return text\n",
-        "\n",
-        "# def to_cloned(text):\n",
-        "#     output_sequence = generate_cloned_sequence(text)\n",
-        "#     return decode_sequence(clone_decoding, output_sequence)\n",
-        "\n",
-        "\n",
-        "# text = \"Of course, our simple model is not perfect. Because we train the model with mostly place and people names. some english words may not be written correctly\"\n",
-        "# sentences = text.split(\".\")\n",
-        "# for sentence in sentences:\n",
-        "#     cloned = to_cloned(\"\".join(sentence))\n",
-        "#     print(\"\".join(sentence), cloned)\n",
-        "\n",
-        "\n",
-        "# cloned = to_cloned(training_input[543])\n",
-        "# print(training_input[543], training_output[543], cloned)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "luEefXhpfS3d"
-      },
-      "source": [
-        "\n",
-        "# sentences = text.split(\".\")\n",
-        "# for sentence in sentences:\n",
-        "#     cloned = to_cloned(\"\".join(sentence))\n",
-        "#     print(\"\".join(sentence), '--->', cloned)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UevgsSfmfzXa"
-      },
-      "source": [
-        "# print(training_input[444])\n",
-        "# print(training_output[444])\n",
-        "# print('-'*20)\n",
-        "# print(to_cloned(training_input[444]))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wE6E-huFgAEh"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
