--- a/Paraphrasing.ipynb
+++ b/Paraphrasing.ipynb
@@ -53,7 +53,8 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "from tensorflow.keras.models import load_model\n",
-        "import pickle"
+        "import pickle\n",
+        "import gzip"
       ],
       "execution_count": null,
       "outputs": []
@@ -241,10 +242,7 @@
         "# training_decoder_input[:, 1:] = encoded_training_output[:,:-1]\n",
         "# training_decoder_input[:, 0] = START_CHAR_CODE\n",
         "training_decoder_input = pad_sequences(encoded_training_input, maxlen=DEFAULT_INPUT_LENGTH)\n",
-        "encoded_training_output = pad_sequences(encoded_training_output, maxlen=DEFAULT_INPUT_LENGTH)\n",
-        "\n",
-        "# Decoder Output (one-hot encoded)\n",
-        "print(encoded_training_output.shape)"
+        "encoded_training_output = pad_sequences(encoded_training_output, maxlen=DEFAULT_INPUT_LENGTH)\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -260,63 +258,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QdNmFfb12WJ3",
-        "outputId": "b33f6f45-5cfb-4111-c8e9-085010075d40",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "clone_vocab_size, original_vocab_size"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(22000, 22000)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "YyMkTS5uhC7_"
       },
       "source": [
-        "import pickle\n",
-        "import gzip\n",
-        "\n",
         "# One hot encoding in chunks\n",
         "\n",
         "size = int(len(encoded_training_output) / 30)\n",
-        "# for i in range(1, 35):\n",
-        "#     with gzip.open(f'pickle/{i}.pkl', 'wb') as f:\n",
-        "#         array = np.eye(clone_vocab_size+1)[encoded_training_output[size*(i-1):size*i]]\n",
-        "#         pickle.dump(array, f, pickle.HIGHEST_PROTOCOL)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ycEBPqyS6asN"
-      },
-      "source": [
-        "# size = int(len(encoded_training_output) / 35)\n",
-        "# print(size)\n",
-        "# for i in range(35):\n",
-        "#     i += 1\n",
-        "#     print(size*(i-1), '-',size*i)"
+        "for i in range(1, 35):\n",
+        "    with gzip.open(f'pickle/{i}.pkl', 'wb') as f:\n",
+        "        array = np.eye(clone_vocab_size+1)[encoded_training_output[size*(i-1):size*i]]\n",
+        "        pickle.dump(array, f, pickle.HIGHEST_PROTOCOL)"
       ],
       "execution_count": null,
       "outputs": []
@@ -327,42 +278,10 @@
         "id": "XGdSi3Mr2ZBj"
       },
       "source": [
-        "import gzip\n",
-        "\n",
-        "def gen():        \n",
+        "def output_gen():        \n",
         "    for i in range(1, 31):\n",
         "        with gzip.open(f'pickle/{i}.pkl', 'rb') as f:\n",
-        "            yield pickle.load(f)\n",
-        "\n",
-        "\n",
-        "targets = gen()\n",
-        "training_decoder_output = targets"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RnCLiExHv9sR"
-      },
-      "source": [
-        "# training_decoder_output = targets\n",
-        "# print(training_decoder_output)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PBWNdfZR9QH0"
-      },
-      "source": [
-        "\n",
-        "# print(clone_vocab_size)\n",
-        "# training_decoder_output = np.eye(clone_vocab_size+1)[encoded_training_output]\n",
-        "# print(training_decoder_output.shape)"
+        "            yield pickle.load(f)"
       ],
       "execution_count": null,
       "outputs": []
@@ -381,7 +300,7 @@
         "print(size)\n",
         "def model_generator():\n",
         "    while True:\n",
-        "        for index, output in enumerate(gen()):\n",
+        "        for index, output in enumerate(output_gen()):\n",
         "            for i in range(size):\n",
         "                yield ([np.expand_dims(training_encoder_input[size*index+i], axis=0), np.expand_dims(training_decoder_input[size*index+i], axis=0)], np.expand_dims(output[i], axis=0))"
       ],
@@ -395,18 +314,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ld7ewSUHfAOl"
-      },
-      "source": [
-        "# print(training_encoder_input[0].shape, training_decoder_input.shape[0])\n",
-        "# original_embedding_matrix.shape, clone_embedding_matrix.shape"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -448,21 +355,7 @@
         "          steps_per_epoch=training_decoder_input.shape[0]//256,\n",
         "          verbose=1)\n",
         "\n",
-        "model.save('model')\n",
-        "\n",
-        "\n",
-        "model = load_model('model', compile=False)\n",
-        "\n",
-        "def generate_cloned_sequence(original_sentence):\n",
-        "    encoder_input = transform(original_encoding, [original_sentence.lower()], DEFAULT_INPUT_LENGTH)\n",
-        "    decoder_input = np.zeros(shape=(len(encoder_input), DEFAULT_OUTPUT_LENGTH), dtype='int')\n",
-        "    decoder_input[:,0] = START_CHAR_CODE\n",
-        "    \n",
-        "    for i in range(1, DEFAULT_OUTPUT_LENGTH):\n",
-        "        output = model.predict([encoder_input, decoder_input]).argmax(axis=2)\n",
-        "        decoder_input[:,i] = output[:,i]\n",
-        "    \n",
-        "    return decoder_input[0, 1:]"
+        "model.save('model')"
       ],
       "execution_count": null,
       "outputs": [
@@ -516,123 +409,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gZICkK7ny2VB"
-      },
-      "source": [
-        "import sys\n",
-        "import numpy\n",
-        "numpy.set_printoptions(threshold=sys.maxsize)\n",
-        "\n",
-        "foo, bar = training_encoder_input[545], training_decoder_input[545]\n",
-        "pred = model.predict([foo, bar])\n",
-        "pred = pred.reshape(1, 20, pred.shape[2])\n",
-        "print(pred.shape)\n",
-        "array = np.argmax(pred[0], axis=1)\n",
-        "print(array, np.argmax(pred, axis=2), array.shape)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "k26kopjiF1dD"
-      },
-      "source": [
-        "df = [clone_decoding[i] for i in array if i != 0]\n",
-        "df"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2-CeCb5LFc9a"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_g-AqdO5fh_z"
-      },
-      "source": [
-        "# def decode_sequence(decoding, sequence):\n",
-        "#     text = ''\n",
-        "#     for i in sequence:\n",
-        "#         if i == 0:\n",
-        "#             break\n",
-        "#         else:   \n",
-        "#             text += decoding[i]\n",
-        "\n",
-        "#     return text\n",
-        "\n",
-        "# def to_cloned(text):\n",
-        "#     output_sequence = generate_cloned_sequence(text)\n",
-        "#     return decode_sequence(clone_decoding, output_sequence)\n",
-        "\n",
-        "\n",
-        "# text = \"Of course, our simple model is not perfect. Because we train the model with mostly place and people names. some english words may not be written correctly\"\n",
-        "# sentences = text.split(\".\")\n",
-        "# for sentence in sentences:\n",
-        "#     cloned = to_cloned(\"\".join(sentence))\n",
-        "#     print(\"\".join(sentence), cloned)\n",
-        "\n",
-        "\n",
-        "# cloned = to_cloned(training_input[543])\n",
-        "# print(training_input[543], training_output[543], cloned)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "luEefXhpfS3d"
-      },
-      "source": [
-        "\n",
-        "# sentences = text.split(\".\")\n",
-        "# for sentence in sentences:\n",
-        "#     cloned = to_cloned(\"\".join(sentence))\n",
-        "#     print(\"\".join(sentence), '--->', cloned)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UevgsSfmfzXa"
-      },
-      "source": [
-        "# print(training_input[444])\n",
-        "# print(training_output[444])\n",
-        "# print('-'*20)\n",
-        "# print(to_cloned(training_input[444]))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wE6E-huFgAEh"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
